--- a/_styles/styl/global/icons.styl
+++ b/_styles/styl/global/icons.styl
@@ -3,8 +3,8 @@
   font-family: 'knockout'
   font-style: normal
   font-weight: normal
-  src: url($font-path + 'knockout.eot?6w4obi')
-  src: url($font-path + 'knockout.eot?6w4obi#iefix') format('embedded-opentype'), url($font-path + 'knockout.woff2?6w4obi') format('woff2'), url($font-path + 'knockout.ttf?6w4obi') format('truetype'), url($font-path + 'knockout.woff?6w4obi') format('woff'), url($font-path + 'knockout.svg?6w4obi#knockout') format('svg')
+  src: url($font-path + 'knockout.eot?7hnaqn')
+  src: url($font-path + 'knockout.eot?7hnaqn#iefix') format('embedded-opentype'), url($font-path + 'knockout.woff2?7hnaqn') format('woff2'), url($font-path + 'knockout.ttf?7hnaqn') format('truetype'), url($font-path + 'knockout.woff?7hnaqn') format('woff'), url($font-path + 'knockout.svg?7hnaqn#knockout') format('svg')
 
 [class^="icon-"],
 [class*=" icon-"]
