--- a/_styles/styl/layout/background.styl
+++ b/_styles/styl/layout/background.styl
@@ -23,26 +23,3 @@ video
   transform: translateX(-50%) translateY(-50%)
   width: auto
   z-index: -1
-
-.background-image
-  background-image: url(../_images/extralarge/reflection.jpg)
-  background-position: center
-  background-size: cover
-  bottom: 0
-  opacity: .6
-  position: absolute
-  top: 0
-  width: 100%
-  z-index: 0
-
-  &:after
-    bottom: 0
-    content: ''
-    height: 5px
-    left: 0
-    position: fixed
-    right: 0
-    width: 100%
-
-  &.home
-    opacity: 1
